--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,8 +6,6 @@ body {
 .app {
   height: 100vh;
   display: flex;
- 
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 120px;
   padding: 0 10px;
 }
