--- a/client/src/Feed.css
+++ b/client/src/Feed.css
@@ -1,8 +1,9 @@
 .feed {
   flex: 0.4;
   border-right: 1px solid var(--twitter-background);
-  min-width: fit-content;
+  min-width: 600px;
   overflow-y: scroll;
+  max-width: fit-content;
 }
 
 .feed::-webkit-scrollbar {
