--- a/client/src/explore.css
+++ b/client/src/explore.css
@@ -1,7 +1,7 @@
 .explore-wrapper{
-    max-width: 600px;
+    max-width: fit-content;
     border-right: 1px solid rgb(230, 236, 240);
-    width: 100%;
+    min-width: 500px;
     
     display: flex;
     flex-direction: column;
