--- a/client/src/login.css
+++ b/client/src/login.css
@@ -31,7 +31,7 @@ label {
   outline: 0;
   border: 0;
   border-bottom: 2px solid #657786;
-  background-color: #f5f8fa;
+
   width: 100%;
   padding: 10px;
 }
@@ -41,7 +41,7 @@ label {
 .FormButton {
   margin: 30px 0;
   padding: 10px;
-  width: 100%;
+  width: 300px;
   background-color: #1da1f2;
   color: white;
   border-radius: 30px;
